# portfolio-builder

./: .env.example  .gitignore  Makefile  README.md  app.py  pyproject.toml  requirements.txt
data/: securities.csv
migrations/versions/: 018307f68d3d_5_add_price_model.py  0e8b58f5b054__8_remove_watchlist_column.py  12c6cc725a77_10_change_trade_date_type.py  14581731c7bf_6_add_last_trade_column.py  1fd9d11e3118_4_correct_ondelete_typo.py  43a219a67f18_9_add_side_field.py  65baca3a01f5_1_initial_migration.py  6a1ce24b7955_3_correct_watchlist_user_models.py  d6270e38275d_6_remove_sector_column.py  d6270e38275d_7_remove_sector_column.py  fe0e176c3581_2_add_watchlist_models.py
portfolio-builder/: __init__.py
portfolio-builder/templates/: index.html
portfolio_builder/: __init__.py  default_settings.py  settings.py  tasks.py  views.py
portfolio_builder/auth/: __init__.py  forms.py  models.py  views.py
portfolio_builder/public/: __init__.py  forms.py  models.py  portfolio.py  tasks.py  utils.py  views.py
portfolio_builder/public/views/: dashboard.py  main.py  watchlist.py
portfolio_builder/static/: styles.css
portfolio_builder/static/javascript/: navbarscript.js  watchlist-all-security-filter.js  watchlist-filter.js
portfolio_builder/templates/: _utils.html  base_layout.html  index.html
portfolio_builder/templates/auth/: login.html  register.html
portfolio_builder/templates/public/: dashboard.html  watchlist.html
tests/: conftest.py  test_models.py  test_portfolio-builder.py  test_tasks.py
tests/test_views/: test_watchlist.py
(+2 files in other folders)
